# FlexTrace

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
src/flexres/: __init__.py  cli.py  config.py  exceptions.py  models.py  pipeline.py
src/flexres/analysis/: alignment.py  comparisons.py  metrics.py  pocket.py  summaries.py
src/flexres/api/: rcsb.py  retry.py  sifts.py  uniprot.py
src/flexres/cache/: manager.py
src/flexres/mapping/: __init__.py  reference.py  residues.py  sequence.py  validation.py
src/flexres/output/: csv_writer.py  json_writer.py  manifest.py  schemas.py
src/flexres/structures/: __init__.py  atoms.py  chains.py  download.py  parser.py
tests/unit/: test_metrics_alignment.py  test_missing_and_output.py  test_parser_numbering.py  test_pocket_summary_cache.py  test_pymol_alignment.py  test_sequence_filter.py  test_sifts_targets.py  test_validation.py
